<resources>
    <string name="app_name">Steamworks Vision</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="not_connected">Not Connected</string>
    <string name="send_test_message">Send Test Message</string>
    <string name="x_coordinate">X Coordinate</string>
    <string name="y_coordinate">Y Coordinate</string>
    <string name="ms">ms</string>
    <string name="fps">FPS:</string>
    <string name="edit_hsv_values">Edit HSV Values</string>
    <string name="hsv_view_mode">HSV View Mode</string>

    <string name="threshold_h_min_key">threshold_h_min_key</string>
    <string name="threshold_h_max_key">threshold_h_max_key</string>
    <string name="threshold_s_min_key">threshold_s_min_key</string>
    <string name="threshold_s_max_key">threshold_s_max_key</string>
    <string name="threshold_v_min_key">threshold_v_min_key</string>
    <string name="threshold_v_max_key">threshold_v_max_key</string>
    <string name="h">H</string>
    <string name="restore_defaults">Restore Defaults</string>
    <string name="s">S</string>
    <string name="v">V</string>
    <string name="target">Target:</string>
    <string name="target_lift">Target Lift</string>
    <string name="target_boiler">Target Boiler</string>
</resources>
